# realtimex-cli-mcps

./: README.md  pyproject.toml  test.py
.github/workflows/: publish-to-pypi.yml
src/realtimex_cli_mcps/: __init__.py  cli.py  setup.py  utils.py
src/realtimex_cli_mcps/data/ansiweather/1.19.0/: FUNC_SPEC.json
src/realtimex_cli_mcps/data/ansiweather/latest/: DOC_STR.txt
src/realtimex_cli_mcps/data/doctranslate_translate/latest/: DOC_STR.txt  FUNC_SPEC.json
src/realtimex_cli_mcps/tools/ansiweather/: setup.py
src/realtimex_cli_mcps/tools/doctranslate_translate/: output.py  setup.py
